# CanLII-Scraper

./: .gitignore  README.md  config.py  content.html  get_token_count.py  potential_contract_cases.txt  primary_eni_config.json  pyproject.toml  requirements.txt  rotate_ip.py  scrape.py  scrape_canlii.py  scraper.py  setup_eni.sh  test_case.py  test_selenium_ip_rotate.py
driver/.wdm/: drivers.json
