[tool.poetry]
name = "canlii"
version = "0.1.0"
description = ""
authors = ["JohnPeng47 <johnpeng47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.29.0"
webdriver-manager = "^4.0.2"
beautifulsoup4 = "^4.13.3"
requests = "^2.32.3"
flask = "^3.1.0"
boto3 = "^1.37.6"
botocore = "^1.37.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
